# openmeters

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: architecture.md
docs/licenses/: iced_widget_pane_grid.md
misc/: openmeters.desktop
packaging/: Makefile  README.md  copyright  nfpm.yaml
src/: audio.rs  domain.rs  dsp.rs  infra.rs  macros.rs  main.rs  persistence.rs  ui.rs  util.rs  visuals.rs
src/audio/: meter_tap.rs  pw_loopback.rs  pw_registry.rs  pw_router.rs  pw_virtual_sink.rs  registry_monitor.rs  ring_buffer.rs
src/audio/pw_registry/: runtime.rs  types.rs
src/domain/: routing.rs  visuals.rs
src/dsp/: loudness.rs  oscilloscope.rs  spectrogram.rs  spectrum.rs  stereometer.rs  waveform.rs
src/infra/: pipewire.rs
src/infra/pipewire/: meter_tap.rs  monitor.rs  registry.rs  virtual_sink.rs
src/infra/pipewire/registry/: runtime.rs  state.rs  types.rs
src/persistence/: lossy.rs  palette.rs  schema.rs  settings.rs  store.rs  theme.rs  visuals.rs
src/persistence/settings/: bar.rs  lossy.rs  palette.rs  schema.rs  store.rs  theme.rs  visuals.rs
src/ui/: app.rs  application_row.rs  bootstrap.rs  config.rs  hardware_sink.rs  pages.rs  render.rs  settings.rs  subscription.rs  theme.rs  visualization.rs  visuals.rs  widgets.rs
src/ui/app/: config.rs  message.rs  visuals.rs  windowing.rs
src/ui/app/visuals/: settings.rs
src/ui/app/visuals/settings/: loudness.rs  oscilloscope.rs  palette.rs  spectrogram.rs  spectrum.rs  stereometer.rs  waveform.rs  widgets.rs
src/ui/pages/: config.rs  visuals.rs
src/ui/pages/config/: application_row.rs
src/ui/pages/visuals/: settings.rs
src/ui/pages/visuals/settings/: chroma.rs  loudness.rs  oscilloscope.rs  palette.rs  spectrogram.rs  spectrum.rs  stereometer.rs  waveform.rs  widgets.rs
src/ui/pane_grid/: content.rs  mod.rs  pane.rs  split.rs  state.rs  title_bar.rs
src/ui/render/: common.rs  geometry.rs  loudness.rs  lufs_meter.rs  oscilloscope.rs  spectrogram.rs  spectrum.rs  stereometer.rs  waveform.rs
src/ui/render/shaders/: sdf.wgsl  spectrogram.wgsl
src/ui/settings/: bar.rs  data.rs  loudness.rs  oscilloscope.rs  palette.rs  persistence.rs  spectrogram.rs  spectrum.rs  stereometer.rs  visuals.rs  waveform.rs  widgets.rs
src/ui/visualization/: audio_stream.rs  loudness.rs  lufs_meter.rs  oscilloscope.rs  spectrogram.rs  spectrum.rs  stereometer.rs  visual_manager.rs  waveform.rs
src/ui/widgets/: application_row.rs  channel_subscription.rs  palette_editor.rs  pane_grid.rs  scroll_glow.rs
src/ui/widgets/pane_grid/: content.rs  state.rs
src/util/: audio.rs  color.rs  log.rs  pipewire.rs  telemetry.rs
src/util/audio/: batcher.rs  channel.rs  format.rs  frequency.rs  level.rs  musical.rs  rate.rs  window.rs
src/util/pipewire/: dict.rs  graph.rs  link.rs  metadata.rs  node.rs
src/visuals/: loudness.rs  options.rs  oscilloscope.rs  palettes.rs  registry.rs  render.rs  spectrogram.rs  spectrum.rs  stereometer.rs  waveform.rs
src/visuals/chroma/: processor.rs  render.rs  state.rs
src/visuals/loudness/: processor.rs  render.rs  state.rs
src/visuals/oscilloscope/: processor.rs  render.rs  state.rs
src/visuals/render/: common.rs
src/visuals/render/shaders/: sdf.wgsl  spectrogram.wgsl
src/visuals/spectrogram/: processor.rs  render.rs  state.rs
src/visuals/spectrum/: processor.rs  render.rs  state.rs
src/visuals/stereometer/: processor.rs  render.rs  state.rs
src/visuals/waveform/: processor.rs  render.rs  state.rs
ui/: main.qml
