[package]
name = "openmeters"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
pipewire = "0.9.2"
anyhow = "1.0.102"
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
iced = { version = "0.14.0", features = ["advanced", "wgpu"] }
iced_widget = "0.14.2"
async-channel = "2.5"
bytemuck = { version = "1.25.0", features = ["derive"] }
iced_wgpu = "0.14.0"
rustfft = "6.4.1"
realfft = "3.5"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
wide = "1.1.1"
iced_layershell = "0.15.1"
wayland-client = "0.31.13"

[dev-dependencies]
ebur128 = "0.1.10"
tempfile = "3.27.0"

[profile.dev]
opt-level = "z"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
strip = true
panic = "abort"

[profile.profiling]
inherits = "release"
lto = "off"
codegen-units = 8
strip = "none"
debug = 2
