[package]
name = "openmeters"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
pipewire = "0.9.2"
anyhow = "1.0.102"
serde_json = "1.0.149"
async-channel = "2.5"
iced_wgpu = "0.14.0"
rustfft = "6.4.1"
realfft = "3.5"
tracing = "0.1.44"
wide = "1.2.0"
wayland-client = "0.31.14"

  [dependencies.serde]
  version = "1.0.228"
  features = [ "derive" ]

  [dependencies.iced]
  version = "0.14.0"
  default-features = false
  features = [ "advanced", "wgpu", "wayland", "thread-pool", "web-colors" ]

  [dependencies.bytemuck]
  version = "1.25.0"
  features = [ "derive" ]

  [dependencies.tracing-subscriber]
  version = "0.3.23"
  features = [ "env-filter", "fmt" ]

  [dependencies.iced_layershell]
  version = "0.17.1"
  default-features = false

[dev-dependencies]
ebur128 = "0.1.10"
tempfile = "3.27.0"

[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
strip = true
panic = "abort"

[profile.profiling]
inherits = "release"
lto = "off"
codegen-units = 8
strip = "none"
debug = 2
