[package]
name = "openmeters"
version = "1.5.0"
edition = "2024"
rust-version = "1.95"
license = "GPL-3.0-or-later"
publish = false
description = "Fast and professional audio metering application for Linux."
repository = "https://github.com/httpsworldview/openmeters"
homepage = "https://github.com/httpsworldview/openmeters"
readme = "README.md"

[dependencies]
pipewire = "0.10.0"
serde_json = "1.0.150"
async-channel = "2.5"
iced_wgpu = { version = "0.14.0", default-features = false }
wgpu = { version = "27.0.1", default-features = false, features = [ "std", "wgsl", "vulkan" ] }
rustfft = "6.4.1"
realfft = "3.5"
tracing = "0.1.44"
wayland-client = "0.31.14"

  [dependencies.serde]
  version = "1.0.228"
  features = [ "derive" ]

  [dependencies.iced]
  version = "0.14.0"
  default-features = false
  features = [ "advanced", "wgpu-bare", "wayland", "x11", "thread-pool", "web-colors" ]

  [dependencies.bytemuck]
  version = "1.25.0"
  features = [ "derive" ]

  [dependencies.tracing-subscriber]
  version = "0.3.23"
  default-features = false
  features = [ "env-filter", "fmt" ]

  [dependencies.iced_layershell]
  version = "0.18.1"
  default-features = false

[patch.crates-io.iced_layershell]
git = "https://github.com/httpsworldview/exwlshelleventloop"
rev = "a0e177a18810f2fcff1bfc800c9f2f63b653844e"

[dev-dependencies]
ebur128 = "0.1.10"
tempfile = "3.27.0"

[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
strip = true
panic = "abort"

[profile.profiling]
inherits = "release"
lto = "off"
codegen-units = 8
strip = "none"
debug = 2
